src/qt/libqgraphicsitem.bf

	
	public void SetFocus1(int64 focusReason)
	{
		CQt.QGraphicsItem_SetFocus1(this.nativePtr, focusReason);
	}
	
	public void EnsureVisible1(void* rect)
	{
		CQt.QGraphicsItem_EnsureVisible1(this.nativePtr, rect);
	}
	
	public void EnsureVisible22(void* rect, int32 xmargin)
	{
		CQt.QGraphicsItem_EnsureVisible22(this.nativePtr, rect, xmargin);
	}
	
	public void EnsureVisible3(void* rect, int32 xmargin, int32 ymargin)
	{
		CQt.QGraphicsItem_EnsureVisible3(this.nativePtr, rect, xmargin, ymargin);
	}
	
	public void EnsureVisible5(double x, double y, double w, double h, int32 xmargin)
	{
		CQt.QGraphicsItem_EnsureVisible5(this.nativePtr, x, y, w, h, xmargin);
	}
	
	public void EnsureVisible6(double x, double y, double w, double h, int32 xmargin, int32 ymargin)
	{
		CQt.QGraphicsItem_EnsureVisible6(this.nativePtr, x, y, w, h, xmargin, ymargin);
	}
	
	public void ItemTransform2(void* other, bool* ok)
	{
		CQt.QGraphicsItem_ItemTransform2(this.nativePtr, other, ok);
	}
	
	public void SetTransform2(void* matrix, bool combine)
	{
		CQt.QGraphicsItem_SetTransform2(this.nativePtr, matrix, combine);
	}
	
	public void*[] CollidingItems1(int64 mode)
	{
		return CQt.QGraphicsItem_CollidingItems1(this.nativePtr, mode);
	}
	
	public bool IsObscured1(void* rect)
	{
		return CQt.QGraphicsItem_IsObscured1(this.nativePtr, rect);
	}
	
	public void Update1(void* rect)
	{
		CQt.QGraphicsItem_Update1(this.nativePtr, rect);
	}
	
	public void Scroll3(double dx, double dy, void* rect)
	{
		CQt.QGraphicsItem_Scroll3(this.nativePtr, dx, dy, rect);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsObject_new")]
	public static extern void* QGraphicsObject_new();
	[LinkName("QGraphicsObject_new2")]
	public static extern void* QGraphicsObject_new2(void* parent);
	[LinkName("QGraphicsObject_MetaObject")]
	public static extern void* QGraphicsObject_MetaObject(void* c_this);
	[LinkName("QGraphicsObject_Metacast")]
	public static extern void* QGraphicsObject_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsObject_Metacall")]
	public static extern int32 QGraphicsObject_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QGraphicsObject_Tr")]
	public static extern libqt_string QGraphicsObject_Tr(char8[] s);
	[LinkName("QGraphicsObject_GrabGesture")]
	public static extern void QGraphicsObject_GrabGesture(void* c_this, int64 typeVal);
	[LinkName("QGraphicsObject_UngrabGesture")]
	public static extern void QGraphicsObject_UngrabGesture(void* c_this, int64 typeVal);
	[LinkName("QGraphicsObject_UpdateMicroFocus")]
	public static extern void QGraphicsObject_UpdateMicroFocus(void* c_this);
	[LinkName("QGraphicsObject_Connect_ParentChanged")]
	public static extern void QGraphicsObject_Connect_ParentChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_OpacityChanged")]
	public static extern void QGraphicsObject_Connect_OpacityChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_VisibleChanged")]
	public static extern void QGraphicsObject_Connect_VisibleChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_EnabledChanged")]
	public static extern void QGraphicsObject_Connect_EnabledChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_XChanged")]
	public static extern void QGraphicsObject_Connect_XChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_YChanged")]
	public static extern void QGraphicsObject_Connect_YChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_ZChanged")]
	public static extern void QGraphicsObject_Connect_ZChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_RotationChanged")]
	public static extern void QGraphicsObject_Connect_RotationChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_ScaleChanged")]
	public static extern void QGraphicsObject_Connect_ScaleChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_ChildrenChanged")]
	public static extern void QGraphicsObject_Connect_ChildrenChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_WidthChanged")]
	public static extern void QGraphicsObject_Connect_WidthChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Connect_HeightChanged")]
	public static extern void QGraphicsObject_Connect_HeightChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsObject_Event")]
	public static extern bool QGraphicsObject_Event(void* c_this, void* ev);
	[LinkName("QGraphicsObject_Tr2")]
	public static extern libqt_string QGraphicsObject_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsObject_Tr3")]
	public static extern libqt_string QGraphicsObject_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QGraphicsObject_GrabGesture2")]
	public static extern void QGraphicsObject_GrabGesture2(void* c_this, int64 typeVal, int64 flags);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsObject_Delete")]
	public static extern void QGraphicsObject_Delete(void* self);
}
public class QAbstractGraphicsShapeItem
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QAbstractGraphicsShapeItem_new();
	}
	
	public ~this()
	{
		CQt.QAbstractGraphicsShapeItem_Delete(this.nativePtr);
	}
	
	public void Pen()
	{
		CQt.QAbstractGraphicsShapeItem_Pen(this.nativePtr);
	}
	
	public void SetPen(void* pen)
	{
		CQt.QAbstractGraphicsShapeItem_SetPen(this.nativePtr, pen);
	}
	
	public void Brush()
	{
		CQt.QAbstractGraphicsShapeItem_Brush(this.nativePtr);
	}
	
	public void SetBrush(void* brush)
	{
		CQt.QAbstractGraphicsShapeItem_SetBrush(this.nativePtr, brush);
	}
	
	public virtual bool IsObscuredBy(void* item)
	{
		return CQt.QAbstractGraphicsShapeItem_IsObscuredBy(this.nativePtr, item);
	}
	
	public virtual void OpaqueArea()
	{
		CQt.QAbstractGraphicsShapeItem_OpaqueArea(this.nativePtr);
	}
	
	public void* Scene()
	{
		return CQt.QGraphicsItem_Scene(this.nativePtr);
	}
	
	public void* ParentItem()
	{
		return CQt.QGraphicsItem_ParentItem(this.nativePtr);
	}
	
	public void* TopLevelItem()
	{
		return CQt.QGraphicsItem_TopLevelItem(this.nativePtr);
	}
	
	public void* ParentObject()
	{
		return CQt.QGraphicsItem_ParentObject(this.nativePtr);
	}
	
	public void* ParentWidget()
	{
		return CQt.QGraphicsItem_ParentWidget(this.nativePtr);
	}
	
	public void* TopLevelWidget()
	{
		return CQt.QGraphicsItem_TopLevelWidget(this.nativePtr);
	}
	
	public void* Window()
	{
		return CQt.QGraphicsItem_Window(this.nativePtr);
	}
	
	public void* Panel()
	{
		return CQt.QGraphicsItem_Panel(this.nativePtr);
	}
	
	public void SetParentItem(void* parent)
	{
		CQt.QGraphicsItem_SetParentItem(this.nativePtr, parent);
	}
	
	public void*[] ChildItems()
	{
		return CQt.QGraphicsItem_ChildItems(this.nativePtr);
	}
	
	public bool IsWidget()
	{
		return CQt.QGraphicsItem_IsWidget(this.nativePtr);
	}
	
	public bool IsWindow()
	{
		return CQt.QGraphicsItem_IsWindow(this.nativePtr);
	}
	
	public bool IsPanel()
	{
		return CQt.QGraphicsItem_IsPanel(this.nativePtr);
	}
	
	public void* ToGraphicsObject()
	{
		return CQt.QGraphicsItem_ToGraphicsObject(this.nativePtr);
	}
	
	public void* ToGraphicsObject2()
	{
		return CQt.QGraphicsItem_ToGraphicsObject2(this.nativePtr);
	}
	
	public void* Group()
	{
		return CQt.QGraphicsItem_Group(this.nativePtr);
	}
	
	public void SetGroup(void* group)
	{
		CQt.QGraphicsItem_SetGroup(this.nativePtr, group);
	}
	
	public int64 Flags()
	{
		return CQt.QGraphicsItem_Flags(this.nativePtr);
	}
	
	public void SetFlag(int64 flag)
	{
		CQt.QGraphicsItem_SetFlag(this.nativePtr, flag);
	}
	
	public void SetFlags(int64 flags)
	{
		CQt.QGraphicsItem_SetFlags(this.nativePtr, flags);
	}
	
	public int64 CacheMode()
	{
		return CQt.QGraphicsItem_CacheMode(this.nativePtr);
	}
	
	public void SetCacheMode(int64 mode)
	{
		CQt.QGraphicsItem_SetCacheMode(this.nativePtr, mode);
	}
	
	public int64 PanelModality()
	{
		return CQt.QGraphicsItem_PanelModality(this.nativePtr);
	}
	
	public void SetPanelModality(int64 panelModality)
	{
		CQt.QGraphicsItem_SetPanelModality(this.nativePtr, panelModality);
	}
	
	public bool IsBlockedByModalPanel()
	{
		return CQt.QGraphicsItem_IsBlockedByModalPanel(this.nativePtr);
	}
	
	public libqt_string ToolTip()
	{
		return CQt.QGraphicsItem_ToolTip(this.nativePtr);
	}
	
	public void SetToolTip(libqt_string toolTip)
	{
		CQt.QGraphicsItem_SetToolTip(this.nativePtr, toolTip);
	}
	
	public void Cursor()
	{
		CQt.QGraphicsItem_Cursor(this.nativePtr);
	}
	
	public void SetCursor(void* cursor)
	{
		CQt.QGraphicsItem_SetCursor(this.nativePtr, cursor);
	}
	
	public bool HasCursor()
	{
		return CQt.QGraphicsItem_HasCursor(this.nativePtr);
	}
	
	public void UnsetCursor()
	{
		CQt.QGraphicsItem_UnsetCursor(this.nativePtr);
	}
	
	public bool IsVisible()
	{
		return CQt.QGraphicsItem_IsVisible(this.nativePtr);
	}
	
	public bool IsVisibleTo(void* parent)
	{
		return CQt.QGraphicsItem_IsVisibleTo(this.nativePtr, parent);
	}
	
	public void SetVisible(bool visible)
	{
		CQt.QGraphicsItem_SetVisible(this.nativePtr, visible);
	}
	
	public void Hide()
	{
		CQt.QGraphicsItem_Hide(this.nativePtr);
	}
	
	public void Show()
	{
		CQt.QGraphicsItem_Show(this.nativePtr);
	}
	
	public bool IsEnabled()
	{
		return CQt.QGraphicsItem_IsEnabled(this.nativePtr);
	}
	
	public void SetEnabled(bool enabled)
	{
		CQt.QGraphicsItem_SetEnabled(this.nativePtr, enabled);
	}
	
	public bool IsSelected()
	{
		return CQt.QGraphicsItem_IsSelected(this.nativePtr);
	}
	
	public void SetSelected(bool selected)
	{
		CQt.QGraphicsItem_SetSelected(this.nativePtr, selected);
	}
	
	public bool AcceptDrops()
	{
		return CQt.QGraphicsItem_AcceptDrops(this.nativePtr);
	}
	
	public void SetAcceptDrops(bool on)
	{
		CQt.QGraphicsItem_SetAcceptDrops(this.nativePtr, on);
	}
	
	public double Opacity()
	{
		return CQt.QGraphicsItem_Opacity(this.nativePtr);
	}
	
	public double EffectiveOpacity()
	{
		return CQt.QGraphicsItem_EffectiveOpacity(this.nativePtr);
	}
	
	public void SetOpacity(double opacity)
	{
		CQt.QGraphicsItem_SetOpacity(this.nativePtr, opacity);
	}
	
	public void* GraphicsEffect()
	{
		return CQt.QGraphicsItem_GraphicsEffect(this.nativePtr);
	}
	
	public void SetGraphicsEffect(void* effect)
	{
		CQt.QGraphicsItem_SetGraphicsEffect(this.nativePtr, effect);
	}
	
	public int64 AcceptedMouseButtons()
	{
		return CQt.QGraphicsItem_AcceptedMouseButtons(this.nativePtr);
	}
	
	public void SetAcceptedMouseButtons(int64 buttons)
	{
		CQt.QGraphicsItem_SetAcceptedMouseButtons(this.nativePtr, buttons);
	}
	
	public bool AcceptHoverEvents()
	{
		return CQt.QGraphicsItem_AcceptHoverEvents(this.nativePtr);
	}
	
	public void SetAcceptHoverEvents(bool enabled)
	{
		CQt.QGraphicsItem_SetAcceptHoverEvents(this.nativePtr, enabled);
	}
	
	public bool AcceptTouchEvents()
	{
		return CQt.QGraphicsItem_AcceptTouchEvents(this.nativePtr);
	}
	
	public void SetAcceptTouchEvents(bool enabled)
	{
		CQt.QGraphicsItem_SetAcceptTouchEvents(this.nativePtr, enabled);
	}
	
	public bool FiltersChildEvents()
	{
		return CQt.QGraphicsItem_FiltersChildEvents(this.nativePtr);
	}
	
	public void SetFiltersChildEvents(bool enabled)
	{
		CQt.QGraphicsItem_SetFiltersChildEvents(this.nativePtr, enabled);
	}
	
	public bool HandlesChildEvents()
	{
		return CQt.QGraphicsItem_HandlesChildEvents(this.nativePtr);
	}
	
	public void SetHandlesChildEvents(bool enabled)
	{
		CQt.QGraphicsItem_SetHandlesChildEvents(this.nativePtr, enabled);
	}
	
	public bool IsActive()
	{
		return CQt.QGraphicsItem_IsActive(this.nativePtr);
	}
	
	public void SetActive(bool active)
	{
		CQt.QGraphicsItem_SetActive(this.nativePtr, active);
	}
	
	public bool HasFocus()
	{
		return CQt.QGraphicsItem_HasFocus(this.nativePtr);
	}
	
	public void SetFocus()
	{
		CQt.QGraphicsItem_SetFocus(this.nativePtr);
	}
	
	public void ClearFocus()
	{
		CQt.QGraphicsItem_ClearFocus(this.nativePtr);
	}
	
	public void* FocusProxy()
	{
		return CQt.QGraphicsItem_FocusProxy(this.nativePtr);
	}
